# rust-todoapp

backend/: Cargo.toml
backend/sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
backend/src/: main.rs
backend/src/model/: db.rs
