[package]
name = "my_todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.95"
sqlx =  { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres" ] }
thiserror = "1.0.40"
tokio = "1.27.0"
warp = "0.3.4"


